objects/TestObj__c.object
<CustomObject>
    <fields>
        <fullName>TestField1__c</fullName>
        <label>TestField1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestField2__c</fullName>
        <label>TestField2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestField3__c</fullName>
        <label>TestField3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFields4__c</fullName>
        <label>TestFields4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>TestObj</label>
    <nameField>
        <label>TestObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>10</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>